<resources>
    <string name="app_name">Assignment2</string>
    <string name="GamingPCDesc">Powerful gaming PC with high-end graphics, fast processor, and RGB lighting.</string>
    <string name="WaterCooledPCDesc">Water cooled PC with custom loop, silent performance, and stunning aesthetics.</string>
    <string name="OfficePCDesc">This custom-built PC is reliable, powerful, and suitable for any home or office work.</string>
    <string name="Builder">Builder</string>
    <string name="selected_pc">Selected PC: %s</string>selected_pc
    <string name="About">About</string>
    <string name="Build">Build</string>
    <string name="Office">Office</string>
    <string name="Water_Cooled">Water Cooled</string>
    <string name="Gaming">Gaming</string>
    <string name="Add_Ons"><![CDATA[Add-Ons >]]></string>
    <string name="OfficePCSpec">TODO</string>
    <string name="GamingPCSpec">TODO</string>
    <string name="WaterCooledPCSpec">TODO</string>
    <string name="ShopPicDesc">TODO</string>
    <string name="About_Us">About Us</string>
    <string name="ShopDesc">At Exe Computer Supplies, we are passionate about providing you with the best custom built computers for your needs. Whether you are a gamer, a designer, a student, or a professional, we have the right solution for you. We use only the highest quality components and offer a range of options to suit your budget and preferences. We also provide excellent after-sales service and technical support to ensure your satisfaction. Exe Computer Supplies is a shop based in Devon, and we have been serving our loyal customers since 2020. Come and visit us today and see why we are the best choice for custom built computers in the region.</string>
    <string name="AddOnsDesc">Please Select Any Addons You would Like:</string>
    <string name="Checkout">Checkout</string>
    <string name="AddOn_1">Mouse</string>
    <string name="AddOn_2">Keyboard</string>
    <string name="AddOn_3">Headset</string>
    <string name="AddOn_4">Speakers</string>
    <string name="AddOn_5">RGB Light Strip</string>
    <string name="AddOn_6">Cable Tidy</string>
    <string name="Your_Order">Your Order:</string>
    <string name="Orders">Orders</string>
    <string name="Confirm">Confirm</string>
    <string name="Checkout_Desc">Test</string>
    <string name="Return">Return</string>
    <string name="Order_TYMSG">Thank you for your order. We will be in contact soon!</string>
    <string name="Order_Confirmed">Order Confirmed!</string>
    <string name="orders_placed">TextView</string>
    <string name="todo">TODO</string>
    <string name="addorremove">+/-</string>
    <string name="clear">Clear</string>
    <string-array name="addon_strings">
        <item>Mouse</item>
        <item>Keyboard</item>
        <item>Headset</item>
        <item>Speakers</item>
        <item>RGB Light Strip</item>
        <item>Cable Tidy</item>
    </string-array>

</resources>